# current_monitoring_esp32

./: .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  diagram.json  docker-compose.yml  justfile  platformio.ini  pyproject.toml  sdkconfig.bare_metal  sdkconfig.esp32_base  sdkconfig.esp32dev  simulation.resc  wokwi.template.toml
.cache/clangd/index/: main.c.EFE61A0486D9A2A0.idx
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/bare_metal/: CMakeLists.txt
app/bare_metal/src/: main.c
app/rtos/: CMakeLists.txt  Kconfig.projbuild  app_definition.cmake
app/rtos/src/: CMakeLists.txt  main.c
components/current_monitor/: CMakeLists.txt
components/current_monitor/include/: current_monitor.h  current_monitor_utils.h
components/current_monitor/src/: current_monitor.c
components/network_manager/: CMakeLists.txt  idf_component.yml
components/network_manager/include/: network_manager.h
components/network_manager/src/: eth_handler.c  mqtt_handler.c  network_manager.c  wifi_handler.c
docs/: design.md
kicad/current_monitoring_board/: .gitignore  current_monitoring_board.kicad_pcb  current_monitoring_board.kicad_prl  current_monitoring_board.kicad_pro  current_monitoring_board.kicad_sch  current_monitoring_board.net  report.txt  sym-lib-table
kicad/mods/TCJB226M025R0150E/: TCJB226M025R0150E.epw  part_info.txt
kicad/mods/TS-1088-AR02016/: SW_TS-1088-AR02016.kicad_mod
kicad/mods/ptsm_0_5_2_2_5_h_smd_r_24/: 1702473.lib  1702473.step  PHOENIX_1702473.kicad_mod
test/: test_main.c
test/esp32/test_rtos/: test_main.c  (+1 more)
(+6 files in other folders)
